--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^16.4.5",
     "eslint-config-airbnb-base": "^15.0.0",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
+    "mongodb": "^6.8.0",
     "puppeteer": "^23.0.2"
   },
   "devDependencies": {
@@ -21,7 +23,8 @@
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^9.0.0"
+    "eslint-plugin-vue": "^9.0.0",
+    "nodemon": "^3.1.4"
   },
   "engines": {
     "node": "^20 || ^18 || ^16",
