--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "productName": "CryDonkey",
   "private": true,
   "scripts": {
-    "dev": "nodemon server.mjs"
+    "dev": "nodemon --legacy-watch server.mjs"
   },
   "dependencies": {
     "axios": "^1.2.1",
