--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,11 +4,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    environment:
-      - NODE_ENV=development
-      - EXPRESS_SERVER_PORT=${EXPRESS_SERVER_PORT}
-      - ADS_API_URL=${ADS_API_URL}
-      - ATLAS_URI=${ATLAS_URI}
     ports:
       - "${EXPRESS_SERVER_PORT}:${EXPRESS_SERVER_PORT}"
     volumes:
@@ -16,6 +11,7 @@ services:
       - /app/node_modules
     depends_on:
       - redis
+      - mongo
     command: npm run dev
 
   redis:
@@ -23,3 +19,15 @@ services:
     container_name: crydonkey-redis
     ports:
       - "6379:6379"
+
+  mongo:
+    image: mongo:latest
+    container_name: crydonkey-mongo
+    ports:
+      - "${DB_PORT_LOCAL}:${DB_PORT}"
+    volumes:
+      - mongo_data:/data/db
+      - ./db/init.js:/docker-entrypoint-initdb.d/init.js:ro
+
+volumes:
+  mongo_data:
