--- a/backend/package.json
+++ b/backend/package.json
@@ -5,15 +5,21 @@
   "productName": "CryDonkey",
   "private": true,
   "scripts": {
-    "start-server": "node server/server.js"
+    "dev": "nodemon --legacy-watch server.mjs"
   },
   "dependencies": {
     "axios": "^1.2.1",
     "body-parser": "^1.20.2",
+    "bull": "^4.16.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "eslint-config-airbnb-base": "^15.0.0",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
+    "ioredis": "^5.4.1",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.3",
+    "morgan": "^1.10.0",
     "puppeteer": "^23.0.2"
   },
   "devDependencies": {
@@ -21,7 +27,8 @@
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^9.0.0"
+    "eslint-plugin-vue": "^9.0.0",
+    "nodemon": "^3.1.4"
   },
   "engines": {
     "node": "^20 || ^18 || ^16",
