--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "axios": "^1.2.1",
     "body-parser": "^1.20.2",
-    "bull": "^4.16.0",
+    "bullmq": "^5.12.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "eslint-config-airbnb-base": "^15.0.0",
