--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,7 @@
 EXPRESS_SERVER_PORT=
+
+### ADS
+ADS_HOST=
 ADS_API_URL=
 
 ### DB
@@ -7,3 +10,7 @@ DB_NAME=
 DB_HOST=
 DB_PORT=
 DB_PORT_LOCAL=
+
+### REDIS
+REDIS_HOST=
+REDIS_PORT=
