--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,13 @@
   "productName": "CryDonkey",
   "private": true,
   "scripts": {
+    "start": "node server.mjs",
     "dev": "nodemon --legacy-watch server.mjs"
   },
   "dependencies": {
     "axios": "^1.2.1",
     "body-parser": "^1.20.2",
-    "bull": "^4.16.0",
+    "bullmq": "^5.12.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "eslint-config-airbnb-base": "^15.0.0",
