--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
     "morgan": "^1.10.0",
+    "openai": "^4.56.0",
     "puppeteer": "^23.0.2"
   },
   "devDependencies": {
