Blum. Added clicks on dogs

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - mongo
     env_file:
       - .env
+    volumes:
+      - ./src:/usr/src/app/src
     networks:
       - crydonkey-network
 
