--- a/backend/package.json
+++ b/backend/package.json
@@ -12,18 +12,23 @@
   "scripts": {
     "build": "pkgroll",
     "dev": "CHOKIDAR_USEPOLLING=true tsx watch ./src/server.ts",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "resetDb": "tsx ./src/db/commands/resetDb.ts"
   },
   "dependencies": {
+    "@types/cls-hooked": "^4.3.9",
     "axios": "^1.2.1",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "bullmq": "^5.12.9",
     "canvas": "^2.11.2",
+    "cls-hooked": "^4.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
     "morgan": "^1.10.0",
@@ -31,8 +36,10 @@
     "puppeteer": "^23.0.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.7.5",
     "pkgroll": "^2.5.0",
