Docker db upd (#53)
Proxy. DB. Adspower connection. Events system.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,20 +4,18 @@ ENVIRONMENT=
 ### EXPRESS
 EXPRESS_SERVER_PORT=
 
-### ADS
-ADS_HOST=
-ADS_API_URL=
-
 ### DB
-ATLAS_URI=
 DB_NAME=
 DB_HOST=
 DB_PORT=
 DB_PORT_LOCAL=
+DB_DATA_PATH=
 
 ### REDIS
 REDIS_HOST=
 REDIS_PORT=
+REDIS_PORT_LOCAL=
+REDIS_DATA_PATH=
 
 ### OPENAI
 OPENAI_API_KEY=
