Add database seeding and reset functionality

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "db:seed": "ts-node -r tsconfig-paths/register src/seeders/index.ts",
+    "db:reset": "ts-node -r tsconfig-paths/register src/modules/database/reset-db.ts"
   },
   "dependencies": {
     "@nestjs/axios": "^3.1.3",
