--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "CryDonkey",
   "productName": "CryDonkey",
+  "type": "module",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
@@ -13,34 +14,43 @@
     "build-electron": "quasar build -m electron"
   },
   "dependencies": {
-    "@quasar/extras": "^1.16.4",
-    "axios": "^1.2.1",
     "dotenv": "^16.4.5",
     "eslint-config-airbnb-base": "^15.0.0",
     "express": "^4.19.2",
-    "pinia": "^2.0.11",
     "puppeteer": "^23.0.2",
+    "axios": "^1.2.1",
+    "vue-i18n": "^11.0.0",
+    "pinia": "^3.0.1",
+    "@quasar/extras": "^1.16.4",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
-    "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@electron/packager": "^18.3.2",
     "@intlify/vite-plugin-vue-i18n": "^3.3.1",
-    "@quasar/app-vite": "^1.9.0",
-    "autoprefixer": "^10.4.2",
     "electron": "^31.3.1",
-    "eslint": "^8.57.0",
+    "@eslint/js": "^9.14.0",
+    "eslint": "^9.14.0",
+    "eslint-plugin-vue": "^9.30.0",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^9.0.0",
     "postcss": "^8.4.14",
-    "vite-plugin-checker": "^0.7.1"
+    "globals": "^15.12.0",
+    "vue-tsc": "^2.0.29",
+    "@vue/eslint-config-typescript": "^14.4.0",
+    "vite-plugin-checker": "^0.9.0",
+    "@vue/eslint-config-prettier": "^10.1.0",
+    "prettier": "^3.3.3",
+    "@types/node": "^20.5.9",
+    "@intlify/unplugin-vue-i18n": "^4.0.0",
+    "@quasar/app-vite": "^2.1.0",
+    "autoprefixer": "^10.4.2",
+    "typescript": "~5.5.3"
   },
   "engines": {
-    "node": "^20 || ^18 || ^16",
+    "node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18",
     "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1"
   }
